--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <section>
       <h1>Earn more money with your business.</h1>
-      <div class="main-text">Create beautifully designed gift coupons for your customers in less than a minute.</div>
+      <div class="main-text">Create beautifully designed gift cards, certificates and coupons for your business in less than a minute.</div>
       <div class="reviews">
         <div class="avatar-group">
           <div class="avatar">
@@ -147,7 +147,7 @@
       <div class="left text">        
         <div class="center-vertically">
           <h2>How it works?</h2>
-          <div class="main-text">Creating gift coupons has never been so simple.</div>
+          <div class="main-text">Creating gift cards has never been so simple.</div>
           <ul class="vertical-points">
             <li>
               <div class="rounded-icon">
@@ -163,7 +163,7 @@
                 <span class="material-symbols-outlined">edit</span>
               </div>
               <div class="text">
-                <span>2. Create first coupon.</span>
+                <span>2. Create a gift card, certificate or a coupon.</span>
                 <div class="description">You can do this on either your computer or mobile device.</div>
               </div>
             </li>
@@ -173,7 +173,7 @@
               </div>
               <div class="text">
                 <span>3. Share it.</span>
-                <div class="description">You can download the coupon as a PDF, print it, or email it to the customer directly from the app.</div>
+                <div class="description">You can download it as a PDF, print it, or email it to the customer directly from the app.</div>
               </div>
             </li>
             <li>
@@ -182,7 +182,7 @@
               </div>
               <div class="text">
                 <span>4. Scan to validate.</span>
-                <div class="description">When the recipient wants to redeem the coupon, scan the QR code on the coupon to validate it.</div>
+                <div class="description">When the recipient wants to redeem it, scan the QR code on it to validate it.</div>
               </div>
             </li>
           </ul>
@@ -190,7 +190,7 @@
       </div>
       <div class="right image">
         <div class="outline">
-          <img decoding="async" src="./images/pdfexample.png" alt="coupon example" />
+          <img decoding="async" src="./images/pdfexample.png" alt="gift card example" />
         </div>
       </div>
     </section>
@@ -209,7 +209,7 @@
           </div>
           <div class="text">
             <h5>Fast.</h5>
-            <div>Creating each coupon takes only a few seconds.</div>
+            <div>Creating a gift card, certificate or coupon takes only a few seconds.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -218,7 +218,7 @@
           </div>
           <div class="text">
             <h5>Beautiful.</h5>
-            <div>Choose from beautifully designed coupon templates.</div>
+            <div>Choose from beautifully designed templates.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -227,7 +227,7 @@
           </div>
           <div class="text">
             <h5>Personalized.</h5>
-            <div>Each coupon can be personalized with a written message.</div>
+            <div>Each card, certificate or coupon can be personalized with a written message.</div>
           </div>
         </li>
         <li class="horizontal">
@@ -236,7 +236,7 @@
           </div>
           <div class="text">
             <h5>Customizable.</h5>
-            <div>Incorporate your company logo and colors into each coupon.</div>
+            <div>Incorporate your company logo and colors .</div>
           </div>
         </li>
         <li class="horizontal">
@@ -254,7 +254,7 @@
           </div>
           <div class="text">
             <h5>Secure.</h5>
-            <div>Prevent the same coupon from being redeemed multiple times.</div>
+            <div>Prevent the same gift certificate or coupon from being redeemed multiple times.</div>
           </div>
         </li>
       </ul>
@@ -282,7 +282,7 @@
               <div class="price monthly">0 €</div>
               <div class="price yearly">0 €</div>
               <div class="description">
-                2 coupons per month.
+                2 cards per month.
               </div>
             </div>
             <div class="column-footer">
@@ -297,10 +297,10 @@
                   </div>
               </div>
               <div class="title">Basic</div>
-              <div class="price monthly">$11.90 <span>/ month</span></div>
+              <div class="price monthly">$11.90 <span>/ month</span></div>  
               <div class="price yearly">$9.50 <span>/ month</span></div>
               <div class="description">
-                10 coupons per month.
+                10 cards per month.
               </div>
             </div>
             <div class="column-footer">
@@ -316,7 +316,7 @@
               <div class="price monthly">$19.90 <span>/ month</span></div>
               <div class="price yearly">$15.90 <span>/ month</span></div>
               <div class="description">
-                1000 coupons per month.
+                1000 cards per month.
               </div>
             </div>
             <div class="column-footer">
