--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
               <div class="price monthly">$11.90 <span>/ month</span></div>  
               <div class="price yearly">$9.50 <span>/ month</span></div>
               <div class="description">
-                10 cards per month.
+                Up to 10 cards per month.
               </div>
             </div>
             <div class="column-footer">
@@ -316,7 +316,7 @@
               <div class="price monthly">$19.90 <span>/ month</span></div>
               <div class="price yearly">$15.90 <span>/ month</span></div>
               <div class="description">
-                1000 cards per month.
+                Up to 1000 cards per month.
               </div>
             </div>
             <div class="column-footer">
