--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <div class="price monthly">0 €</div>
               <div class="price yearly">0 €</div>
               <div class="description">
-                2 cards per month.
+                <span class="w-700">2</span> cards per month.
               </div>
             </div>
             <div class="column-footer">
@@ -300,7 +300,7 @@
               <div class="price monthly">$11.90 <span>/ month</span></div>  
               <div class="price yearly">$9.50 <span>/ month</span></div>
               <div class="description">
-                Up to 10 cards per month.
+                Up to <span class="w-700">10</span> cards per month.
               </div>
             </div>
             <div class="column-footer">
@@ -316,7 +316,7 @@
               <div class="price monthly">$19.90 <span>/ month</span></div>
               <div class="price yearly">$15.90 <span>/ month</span></div>
               <div class="description">
-                Up to 1000 cards per month.
+                Up to <span class="w-700">1000</span> cards per month.
               </div>
             </div>
             <div class="column-footer">
