Convert all textures to webp

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, maximum-scale=1, initial-scale=1, width=device-width" />
-    <link rel="icon" sizes="192x192" href="./images/192icon.png" type="image/png">
-    <link rel="shortcut icon" href="./images/192icon.png" type="image/png">
-    <link rel="apple-touch-icon" href="./images/192icon.png" type="image/png">
+    <link rel="icon" sizes="192x192" href="./images/192icon.webp" type="image/png">
+    <link rel="shortcut icon" href="./images/192icon.webp" type="image/png">
+    <link rel="apple-touch-icon" href="./images/192icon.webp" type="image/png">
     <title>Free Gift Card Maker</title>
     <meta name="description" content="Easily create stunning, customizable gift cards, certificates, and coupons for your customers in seconds. Perfect for business owners looking to boost revenue, customer loyalty, and engagement." />
     <link rel="canonical" href="https://www.giftcardmaker.net/">
@@ -47,7 +47,7 @@
     <div class="sticky-header">
       <header>
         <a class="logo" href="./index.html#">
-          <img decoding="async" src="./images/192icon.png" alt="logo" />
+          <img decoding="async" src="./images/192icon.webp" alt="logo" />
           <span class="logo-text hide-on-tablet">Gift Card Maker</span>
         </a>
         <ul class="horizontal hide-on-mobile">
@@ -139,7 +139,7 @@
       </div>
       <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=5000">Create first coupon</a>
       <div class="intro-image">
-        <img decoding="async" src="./images/app-list-framed.png" alt="application screenshot" />
+        <img decoding="async" src="./images/app-list-framed.webp" alt="application screenshot" />
       </div>
     </section>
 
@@ -190,7 +190,7 @@
       </div>
       <div class="right image">
         <div class="outline">
-          <img decoding="async" src="./images/pdfexample.png" alt="gift card example" />
+          <img decoding="async" src="./images/pdfexample.webp" alt="gift card example" />
         </div>
       </div>
     </section>
@@ -340,7 +340,7 @@
     <section id="contact" class="text-by-image">
       <div class="left image">
         <div class="outline invisible">
-          <img decoding="async" class="big" src="./images/workplace-happiness3.jpg" alt="workplace happiness" />
+          <img decoding="async" class="big" src="./images/workplace-happiness3.webp" alt="workplace happiness" />
         </div>
       </div>
       <div class="right text"> 
@@ -355,7 +355,7 @@
     <footer>
       <div class="horizontal">
         <a class="logo" href="./index.html#">
-          <img decoding="async" src="./images/192icon-white.png" alt="logo" />
+          <img decoding="async" src="./images/192icon-white.webp" alt="logo" />
           <span class="logo-text hide-on-tablet">Gift Card Maker</span>
         </a>
         <div class="horizontal">
