Img lazy loading

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="sticky-header">
       <header>
         <a class="logo" href="./index.html#">
-          <img decoding="async" src="./images/192icon.webp" alt="logo" />
+          <img loading="lazy" decoding="async" src="./images/192icon.webp" alt="logo" />
           <span class="logo-text hide-on-tablet">Gift Card Maker</span>
         </a>
         <ul class="horizontal hide-on-mobile">
@@ -99,19 +99,19 @@
       <div class="reviews">
         <div class="avatar-group">
           <div class="avatar">
-            <img decoding="async" src="./images/user1.webp" alt="user 1 avatar">
+            <img loading="lazy" decoding="async" src="./images/user1.webp" alt="user 1 avatar">
           </div>
           <div class="avatar">
-            <img decoding="async" src="./images/user2.webp" alt="user 2 avatar">
+            <img loading="lazy" decoding="async" src="./images/user2.webp" alt="user 2 avatar">
           </div>
           <div class="avatar">
-            <img decoding="async" src="./images/user3.webp" alt="user 3 avatar">
+            <img loading="lazy" decoding="async" src="./images/user3.webp" alt="user 3 avatar">
           </div>
           <div class="avatar">
-            <img decoding="async" src="./images/user4.webp" alt="user 4 avatar">
+            <img loading="lazy" decoding="async" src="./images/user4.webp" alt="user 4 avatar">
           </div>
           <div class="avatar">
-            <img decoding="async" src="./images/user5.webp" alt="user 5 avatar">
+            <img loading="lazy" decoding="async" src="./images/user5.webp" alt="user 5 avatar">
           </div>
         </div>
         <div class="rating">
@@ -139,7 +139,7 @@
       </div>
       <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=5000">Create first coupon</a>
       <div class="intro-image">
-        <img decoding="async" src="./images/app-list-framed.webp" alt="application screenshot" />
+        <img loading="lazy" decoding="async" src="./images/app-list-framed.webp" alt="application screenshot" />
       </div>
     </section>
 
@@ -190,7 +190,7 @@
       </div>
       <div class="right image">
         <div class="outline">
-          <img decoding="async" src="./images/pdfexample.webp" alt="gift card example" />
+          <img loading="lazy" decoding="async" src="./images/pdfexample.webp" alt="gift card example" />
         </div>
       </div>
     </section>
@@ -340,7 +340,7 @@
     <section id="contact" class="text-by-image">
       <div class="left image">
         <div class="outline invisible">
-          <img decoding="async" class="big" src="./images/workplace-happiness3.webp" alt="workplace happiness" />
+          <img loading="lazy" decoding="async" class="big" src="./images/workplace-happiness3.webp" alt="workplace happiness" />
         </div>
       </div>
       <div class="right text"> 
@@ -355,7 +355,7 @@
     <footer>
       <div class="horizontal">
         <a class="logo" href="./index.html#">
-          <img decoding="async" src="./images/192icon-white.webp" alt="logo" />
+          <img loading="lazy" decoding="async" src="./images/192icon-white.webp" alt="logo" />
           <span class="logo-text hide-on-tablet">Gift Card Maker</span>
         </a>
         <div class="horizontal">
