Font weight cleanup #2

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
         <div class="box">
             <div class="column-header ribbon-holder">
               <div class="title">Free</div>
-              <div class="price monthly">0 €</div>
-              <div class="price yearly">0 €</div>
+              <div class="price monthly"><span class="w-700">$0</span></div>
+              <div class="price yearly"><span class="w-700">$0</span></div>
               <div class="description">
                 <span class="w-700">2</span> cards per month.
               </div>
@@ -297,8 +297,8 @@
                   </div>
               </div>
               <div class="title">Basic</div>
-              <div class="price monthly">$11.90 <span>/ month</span></div>  
-              <div class="price yearly">$9.50 <span>/ month</span></div>
+              <div class="price monthly"><span class="w-700">$11.90</span> / month</div>  
+              <div class="price yearly"><span class="w-700">$9.50</span> / month</div>
               <div class="description">
                 Up to <span class="w-700">10</span> cards per month.
               </div>
@@ -313,8 +313,8 @@
         <div class="box">
             <div class="column-header ribbon-holder">
               <div class="title">Pro</div>
-              <div class="price monthly">$19.90 <span>/ month</span></div>
-              <div class="price yearly">$15.90 <span>/ month</span></div>
+              <div class="price monthly"><span class="w-700">$19.90</span> / month</div>
+              <div class="price yearly"><span class="w-700">$15.90</span> / month</div>
               <div class="description">
                 Up to <span class="w-700">1000</span> cards per month.
               </div>
