Proper font setup

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <meta name="twitter:title" content="Free Gift Card Maker">
     <meta name="twitter:description" content="Easily create stunning, customizable gift cards, certificates, and coupons for your customers in seconds. Perfect for business owners looking to boost revenue, customer loyalty, and engagement.">
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+3:wght@700&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+3:wght@400..600&display=swap');
     </style>
     <link rel="stylesheet" href="build/styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@500" rel="stylesheet" />
