--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Free Gift Card Maker">
     <meta name="twitter:description" content="Easily create stunning, customizable gift cards, certificates, and coupons for your customers in seconds. Perfect for business owners looking to boost revenue, customer loyalty, and engagement.">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+3:wght@400..600&display=swap');
-    </style>
+    
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+3:wght@200..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="build/styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght@500" rel="stylesheet" />
     <script async src="https://tally.so/widgets/embed.js"></script>
