--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="minimum-scale=1, maximum-scale=1, initial-scale=1, width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" sizes="192x192" href="./images/192icon.webp" type="image/png">
     <link rel="shortcut icon" href="./images/192icon.webp" type="image/png">
     <link rel="apple-touch-icon" href="./images/192icon.webp" type="image/png">
