Dont load intro image async

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </div>
       <a class="button-like cta" href="#tally-open=3qEBk7&tally-layout=modal&tally-width=380&tally-emoji-animation=none&tally-auto-close=5000">Create first coupon</a>
       <div class="intro-image">
-        <img loading="lazy" decoding="async" src="./images/app-list-framed.webp" alt="application screenshot" />
+        <img src="./images/app-list-framed.webp" alt="application screenshot" />
       </div>
     </section>
 
