--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         </div>
       </div>
       <div class="right image">
-        <div class="outline">
-          <img loading="lazy" decoding="async" src="./images/pdfexample.webp" alt="gift card example" />
+        <div class="outline iphone">
+          <img loading="lazy" decoding="async" src="./images/iphone.webp" alt="gift card example" />
         </div>
       </div>
     </section>
@@ -345,7 +345,7 @@
       <div class="right text"> 
         <div class="center-vertically">
           <h2>Have a question?</h2>
-          <div class="main-text">Feel free to email us at <a href="mailto:info@giftcardmaker.net">info@giftcardmaker.net</a>. We’ll be happy to assist you.</div>
+          <div class="main-text">Feel free to email us at <a class="w-600" href="mailto:info@giftcardmaker.net">info@giftcardmaker.net</a>. We’ll be happy to assist you.</div>
           <a class="button-like cta" href="mailto:info@giftcardmaker.net">Contact us</a>
         </div>
       </div>
